fix: update security configuration and static file handling

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TON My Name</title>
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="TON Name Service" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <title>TON Name Service</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: wss: data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' https: data: blob:; frame-src 'self' https: ton: tonhub:" />
   </head>
   <body>
     <div id="root"></div>
