fix: update CSP and routing configuration

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="TON Name Service" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>TON Name Service</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; connect-src 'self' https: wss: data:; style-src 'self' 'unsafe-inline' https:; img-src 'self' https: data: blob:; frame-src 'self' https: ton: tonhub:; default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';" />
   </head>
   <body>
     <div id="root"></div>
